# controller/technicianController.go
@@ -33,7 +33,6 @@ func GetTechnicianController(c *gin.Context) {
 // @Tags Technician
 // @Accept  json
 // @Produce  json
-// @Param   technician    body  schemas.Technician  true "Technician" example={"name":"Josiel","email":"josiel.jcc@hotmail.com","phone":"(11) 99999-9999","password":"123456"}
 // @Router /register/technician [post]
 func CreateTechnicianController(c *gin.Context) {
 	var technician schemas.Technician
@@ -58,7 +57,6 @@ func CreateTechnicianController(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param   id    path  string  true "ID"
-// @Param   technician    body  schemas.Technician  true "Technician"
 // @Router /technicians/{id} [put]
 func UpdateTechnicianController(c *gin.Context) {
 	id := c.Param("id")
