# schemas/part.go
@@ -22,6 +22,13 @@ type PartResponse struct {
 	Orders      []Order `json:"orders"`
 }
 
+type PartCreate struct {
+	Name        string  `json:"name"`
+	Description string  `json:"description"`
+	Quantity    int     `json:"quantity"`
+	Price       float64 `json:"price"`
+}
+
 func (p Part) ToResponse() PartResponse {
 	return PartResponse{
 		ID:          p.ID,
